<resources>
    <string name="app_name">RAYATE!</string>
    <string name="create_account">Crear Cuenta</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="or">O</string>
    <string name="sign_in">Entrar</string>
    <string name="you_are_signed_in">Haz Iniciado Sesion!</string>
    <string name="sign_out">Cerrar Sesion</string>
    <string name="rayate">RAYATE!</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="nombre">Nombre</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="convertir_perfil">CONVERTIR PERFIL</string>
    <string name="cambia_tu_perfil_a_artista">CAMBIA TU PERFIL A ARTISTA</string>
    <string name="title_activity_activar">ActivarActivity</string>
    <string name="confirmar_ubicacion">CONFIRMAR UBICACION</string>
    <string name="select_files_to_upload">Select Files to Upload</string>
    <string name="title_activity_main">Firebase Kotlin</string>
    <string name="subtitle_activity_main">Upload FIles</string>
    <string name="all">TODO</string>
    <string name="upload">SUBIR ARCHIVOS</string>
    <string name="title_activity_mapa">MapaActivity</string>
    <string name="payments_show_name" translatable="false">Datos de Pago de %s Recibidos Con Exito!</string>


</resources>